Added working wave system and fully functional Exalt RadarArray (mesh+particles).
Added meld and capture point actor/volume classes
Added compilable but not very functional WorldInfo( needs more work )

--- a/UDK-2011-09/UDKGame/Config/DefaultEngine.ini
+++ b/UDK-2011-09/UDKGame/Config/DefaultEngine.ini
@@ -5,16 +5,16 @@ BasedOn=..\UDKGame\Config\DefaultEngineUDK.ini
 MapExt=upk
 ; Any additional map extension to support for map loading.  
 ; Maps without an extension always saved with the above MapExt
-AdditionalMapExt=mobile
-Map=UDKFrontEndMap.udk
-LocalMap=UDKFrontEndMap.udk
-TransitionMap=EnvyEntry.udk
-EXEName=UTGame.exe
-DebugEXEName=DEBUG-UTGame.exe
+;AdditionalMapExt=mobile
+;Map=UDKFrontEndMap.udk
+;LocalMap=UDKFrontEndMap.udk
+;TransitionMap=EnvyEntry.udk
+;EXEName=UTGame.exe
+;DebugEXEName=DEBUG-UTGame.exe
 
 [Engine.ScriptPackages]
-+NonNativePackages=UTGame
-+NonNativePackages=UTGameContent
+;+NonNativePackages=UTGame
+;+NonNativePackages=UTGameContent
 +NativePackages=Core
 +NativePackages=Engine
 +NativePackages=XComGame
@@ -26,8 +26,8 @@ DebugEXEName=DEBUG-UTGame.exe
 DemoSpectatorClass=UTGame.DemoRecSpectator
 
 [UnrealEd.EditorEngine]
-+EditPackages=UTGame
-+EditPackages=UTGameContent
+;+EditPackages=UTGame
+;+EditPackages=UTGameContent
 +EditPackages=XComGame
 
 [Engine.Engine]
@@ -35,7 +35,7 @@ ConsoleClassName=UTGame.UTConsole
 ScoutClassName=UTGame.UTScout
 GameViewportClientClassName=UTGame.UTGameViewportClient
 DefaultPostProcessName=FX_HitEffects.UTPostProcess_PC
-ApexDamageParamsName=UDK_APEXDamageMap.UDKDamageMap
+;ApexDamageParamsName=UDK_APEXDamageMap.UDKDamageMap
 bUseStreamingPause=true
 
 [PlatformInterface]
