--- a/UDK-2011-09/UDKGame/Config/UDKEngine.ini
+++ b/UDK-2011-09/UDKGame/Config/UDKEngine.ini
@@ -4,16 +4,15 @@ Name=Player
 Map=UDKFrontEndMap.udk
 LocalMap=UDKFrontEndMap.udk
 LocalOptions=
-TransitionMap=EnvyEntry.udk
+TransitionMap=Entry
 MapExt=upk
-EXEName=UTGame.exe
-DebugEXEName=DEBUG-UTGame.exe
+EXEName=UDK.exe
+DebugEXEName=DEBUG-UDK.exe
 SaveExt=usa
 Port=7777
 PeerPort=7778
 GameName=Unreal Development Kit
 GameNameShort=UDK
-AdditionalMapExt=mobile
 
 [Engine.ScriptPackages]
 EngineNativePackages=Core
@@ -25,8 +24,6 @@ EditorPackages=UnrealEd
 ScaleformEditorPackages=GFxUIEditor
 NativePackages=UDKBase
 EditorPackages=UTEditor
-NonNativePackages=UTGame
-NonNativePackages=UTGameContent
 NativePackages=Core
 NativePackages=Engine
 NativePackages=XComGame
@@ -199,10 +196,10 @@ bUseStreamingPause=true
 UseStreaming=True
 AllowShadowVolumes=False
 bEnableColorClear=TRUE
-ApexDamageParamsName=UDK_APEXDamageMap.UDKDamageMap
 bSuppressMapWarnings=False
 bCookSeparateSharedMPGameContent=False
 bDisableAILogging=False
+ApexDamageParamsName=
 DefaultOnlineSubsystemName=
 DynamicCoverMeshComponentName=
 
@@ -531,12 +528,10 @@ FRScriptOutputPath=..\..\UDKGame\ScriptFinalRelease
 EditPackages=UDKBase
 EditPackages=UTEditor
 InEditorGameURLOptions=?quickstart=1?numplay=1
-EditPackages=UTGame
-EditPackages=UTGameContent
 EditPackages=XComGame
 
 [UnrealEd.UnrealEdEngine]
-AutoSaveIndex=0
+AutoSaveIndex=1
 PackagesToBeFullyLoadedAtStartup=EditorMaterials
 PackagesToBeFullyLoadedAtStartup=EditorMeshes
 PackagesToBeFullyLoadedAtStartup=EditorResources
@@ -1286,16 +1281,16 @@ StatsKeyMappings=(ViewId=1,PropertyId=0x10000142,KeyId=265)
 [IniVersion]
 0=1316001718.000000
 1=1307714765.000000
-2=1421541840.000000
+2=1421709242.000000
 
 [HardwareSurvey]
 LastSurveyVersion=8916
-LastSurveyDate=20150118
+LastSurveyDate=20150121
 SurveysFailed=1
 SurveysAttempted=1
 
 [AppCompat]
-MeasuredCPUScore=156.986588
+MeasuredCPUScore=192.239090
 CompatLevelComposite=3
 CompatLevelCPU=5
 CompatLevelGPU=3
