Added Kismet tactical music override

--- a/UDK-2011-09/UDKGame/Config/DefaultEngine.ini
+++ b/UDK-2011-09/UDKGame/Config/DefaultEngine.ini
@@ -18,6 +18,8 @@ MapExt=upk
 +NativePackages=Core
 +NativePackages=Engine
 +NativePackages=XComGame
++NonNativePackages=XComUDK
++NonNativePackages=XComModMusicOverride
 
 [Core.System]
 +Extensions=mobile
@@ -29,6 +31,8 @@ DemoSpectatorClass=UTGame.DemoRecSpectator
 ;+EditPackages=UTGame
 ;+EditPackages=UTGameContent
 +EditPackages=XComGame
++EditPackages=XComUDK
++EditPackages=XComModMusicOverride
 
 [Engine.Engine]
 ConsoleClassName=UTGame.UTConsole
@@ -51,8 +55,6 @@ AppID=169315946448309
 RenderingOverrides=(bAllowAmbientOcclusion=True,bAllowDominantWholeSceneDynamicShadows=True,bAllowMotionBlurSkinning=True)
 
 [Engine.PackagesToAlwaysCook]
-+Package=EnvyEntry
-+Package=VEH_PickupTruckB
 
 [Engine.StartupPackages]
 +Package=FX_HitEffects
